Bug 394689 - ALT-TAB randomly ignored
Summary: ALT-TAB randomly ignored
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kglobalaccel
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
: 391056 392302 395165 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-05-26 04:06 UTC by Sontol Bonggol
Modified: 2018-07-20 16:39 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sontol Bonggol 2018-05-26 04:06:40 UTC
As described in the KDE forum (https://forum.kde.org/viewtopic.php?t=141296):
I've recently upgraded to Plasma 5.10.4 and I'm having an incredibly annoying issue. Occasionally, ALT-TAB is ignored the first 1, 2 up to 5 or so times, and then it finally works. This is unacceptable because when I'm programming / debugging / testing I have to switch windows and do a lot of different things and I don't have time to wait for visual confirmation that my keyboard command was acknowledged. I just send keystrokes to my hands and expect the computer to work, but end up typing into the wrong window because of this.
Comment 1 Sontol Bonggol 2018-05-26 04:15:20 UTC
Proposed patch to fix: https://phabricator.kde.org/D13128
Comment 2 Elvis Angelaccio 2018-06-01 21:45:28 UTC
Git commit 706730f9d7a3357c703d5a24833f0436972b1b91 by Elvis Angelaccio, on behalf of Sontol Bonggol.
Committed on 01/06/2018 at 21:44.
Pushed by elvisangelaccio into branch 'master'.

Make sure ungrab keyboard request is processed before emitting shortcut

Summary:
In some rare cases, the ungrab keyboard request is processed later than
the action of the key shortcut. This can make the application that try
to grab the keyboard (e.g. in kwin) fail to do so. The solution is to
use ungrab_keyboard_checked() and xcb_request_check() before emitting
the shortcut signal.

Reviewers: #frameworks, #plasma, mck182, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: elvisangelaccio, davidedmundson, fvogt, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D13128

M  +5    -1    src/runtime/plugins/xcb/kglobalaccel_x11.cpp

https://commits.kde.org/kglobalaccel/706730f9d7a3357c703d5a24833f0436972b1b91
Comment 3 Nate Graham 2018-07-20 16:38:44 UTC
*** Bug 392302 has been marked as a duplicate of this bug. ***
Comment 4 Nate Graham 2018-07-20 16:38:55 UTC
*** Bug 395165 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2018-07-20 16:39:23 UTC
*** Bug 391056 has been marked as a duplicate of this bug. ***