Make sure ungrab keyboard request is processed before emitting shortcut

Summary:
In some rare cases, the ungrab keyboard request is processed later than
the action of the key shortcut. This can make the application that try
to grab the keyboard (e.g. in kwin) fail to do so. The solution is to
use ungrab_keyboard_checked() and xcb_request_check() before emitting
the shortcut signal.

BUG: 394689

Reviewers: #frameworks, #plasma, mck182, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: elvisangelaccio, davidedmundson, fvogt, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D13128